# nemotron-voice-agent

./: .gitignore  Dockerfile.bot  Dockerfile.unified  README.md  pyproject.toml
deploy/: DEPLOYMENT.md  README.md  RUNBOOK.md  _smoke_backend.py  _smoke_haproxy_check.py  asr.env.example  drain.sh  gen_haproxy.py  haproxy.cfg.example  launch_multiproc.sh  launch_single.sh  nemotron-asr.service  smoke_local.sh
deploy/_drain_fixtures/: server-drained-empty.csv  server-missing.csv  server-up-with-traffic.csv
deploy/dual-model-router/: README.md  router.py  run_dual_model.sh
docs/: canary-1b-v2-serving-plan.md  inference-flow-per-chunk.html  ttfs-latency-explainer.html  vllm-realtime-api-plan.md
ec2-bench/: README.md  bootstrap.sh  ec2_down.py  ec2_up.py  local_lb.py
pipecat_bots/: bot.py  nvidia_stt.py  pocket_tts.py
runtime/: .gitignore  ARTIFACTS.md  README.export_model.md  README.md  aot_compile.py  aot_compile_buckets.py  aot_compile_enc_first.py  build_bucket_manifest.py  capture_decode_fixtures.py  export_decode.py  export_enc_first_t2a.py  export_finalize_buckets.py  export_finalize_bundle.py  export_finalize_encoder.py  export_finalize_t2a.py  export_model.sh  export_pipeline.py  export_session_bundle.py  export_shared_weights.py  export_steady_batched.py  export_stream_encoder.py  export_t2a.py  export_t2a_io_bundle.py  finalize_ref.py  model_profile.py  pyproject.toml  ref_decode.py  run_l40s_density.README.md  run_l40s_density.sh  session_wer.py  setup-venv.sh  start_ws_server_local.sh  stream_decode.py  strip_bucket_weights.py  strip_steady_buckets.py  test_finalize_padding.py  validate_encoder.py  validate_encoder_v2.py  validate_preproc.py  validate_shared_weights.py
runtime/container/: Dockerfile  README.md  enter.sh
runtime/cpp/: CMakeLists.txt  aoti_encoder_main.cpp  decode_main.cpp  density_main.cpp  finalize_main.cpp  pipeline_main.cpp  session_main.cpp  steady_batch_bench.cpp  steady_main.cpp  step0_aoti_overlap_probe.cpp  ws_framing_selftest.cpp  ws_server.cpp  ws_tail_microbench.cpp  ws_tail_microbench_client.cpp
runtime/cpp/lib/admission/: density_admission.cpp  density_admission.h
runtime/cpp/lib/runtime_io/: io.cpp  io.h  jit_load.cpp  jit_load.h  prewarm.cpp  prewarm.h  steady_batch_dir.h  tmp_hygiene.cpp  tmp_hygiene.h
runtime/cpp/lib/scheduler/: batched_steady_scheduler.cpp  batched_steady_scheduler.h  steady_batch_primitive.h
runtime/cpp/lib/session/: first_encoder.cpp  first_encoder.h  model_constants.h  runtime.cpp  runtime.h  session.cpp  session.h
runtime/cpp/lib/telemetry/: session_timing.h  stats_collector.cpp  stats_collector.h
runtime/cpp/lib/ws/: framing.cpp  framing.h  handshake.cpp  handshake.h  routes.cpp  routes.h
runtime/fixtures/: decode_noise_3s.pt  decode_noise_loud_3s.pt  decode_quiet_1s.pt  decode_real_0.pt  decode_real_1.pt  decode_real_2.pt  manifest.json
runtime/fixtures_ml/: decode_noise_3s.pt  decode_noise_loud_3s.pt  decode_quiet_1s.pt  decode_real_0.pt  manifest.json
runtime/scripts/: backup_artifacts_s3.sh  check_no_raw_jit_load.sh
scripts/: nemotron.sh  start_unified.sh
src/nemotron_speech/: batch_primitives.py  cudagraph_encoder.py  server.py
tests/: test_cudagraph_encoder.py  test_cudagraph_finalize.py  test_scheduler_model_lanes.py
tests/server_compat/: run_compat.py
