# pyproject.toml for the native runtime export + oracle environment.
#
# Separate project from the repo-root pyproject.toml — that one declares the
# production WebSocket server's lightweight deps (pipecat-ai, nvidia-riva-client,
# websockets, aiohttp, numpy, loguru). This one declares the heavyweight
# NeMo + torch+cu128 + AOTI compile-time deps used by the C++ runtime export
# scripts + the Python oracle (finalize_ref.py).
#
# Keeping them separate avoids bloating the production server's uv.lock with
# ~360 transitive packages and ~11 GiB of CUDA/torch/NeMo wheels.
#
# Setup:
#   bash setup-venv.sh     # creates ./.venv via `uv sync`
#
# After setup, scripts run as:
#   HF_HUB_OFFLINE=1 ./.venv/bin/python <script>

[project]
name = "nemotron-runtime-export"
version = "0.1.0"
description = "Native runtime export + Python oracle environment for nemotron-speech-streaming-en-0.6b"
requires-python = ">=3.12,<3.13"

# Top-level dependency intents — direct user installs that drove the parakeet
# venv (captured 2026-05-28 via `pip list --not-required`). uv resolves the
# full transitive graph and writes it to uv.lock.
#
# torch + torchvision are explicitly pinned to the +cu128 wheels (NeMo and
# friends would otherwise resolve to whatever torch satisfies their broad
# constraint, and we lose the cu128 build).
dependencies = [
  # PyTorch (cu128 wheels — see [tool.uv.sources] + [[tool.uv.index]] below).
  "torch==2.8.0",
  "torchvision==0.23.0",
  # Triton is bundled with torch on Linux/x86_64 but is also required as a
  # direct dep for some NeMo paths.
  "triton==3.4.0",

  # NeMo toolkit + extensions.
  "nemo-toolkit==2.4.1",
  "nemo_run==0.5.0",
  "nemo_text_processing==1.1.0",

  # NVIDIA tooling.
  "nvidia-modelopt==0.31.0",
  "nvidia-resiliency-ext==0.4.1",
  "nvidia_lm_eval==25.6.1",

  # ASR + audio.
  "lhotse==1.31.1",
  "librosa==0.11.0",
  "pesq==0.0.4",
  "pystoi==0.4.1",
  "pyloudnorm==0.1.1",
  "pydub==0.25.1",
  "resampy==0.4.3",
  "sox==1.5.0",
  "kaldi-python-io==1.2.2",
  "pyannote.metrics==3.2.1",
  "jiwer==3.1.0",
  "whisper_normalizer==0.1.12",
  "texterrors==0.5.1",

  # Training / lightning / megatron stack (transitive for some NeMo paths).
  "lightning==2.4.0",
  "megatron-core==0.13.1",
  "megatron-energon==5.2.0",
  "accelerate>=1.10",
  "peft==0.17.1",
  "bitsandbytes==0.45.5",
  "accelerated-scan==0.2.0",
  "nerfacc==0.5.3",

  # HF / transformers / diffusion (transitive for NeMo's tokenizer + some
  # multimodal paths).
  "diffusers==0.35.1",
  "sentence-transformers==5.1.1",
  "open-clip-torch==2.24.0",
  "clip==0.2.0",
  "taming-transformers==0.0.1",
  "qwen-vl-utils==0.0.14",

  # Speech / NLP utilities.
  "Janome==0.5.0",
  "jieba==0.42.1",
  "pangu==4.0.6.1",
  "OpenCC==1.1.9",
  "pypinyin-dict==0.9.0",
  "num2words==0.5.14",

  # Numerical / scientific.
  "h5py==3.14.0",
  "zarr==2.18.7",
  "tensorstore==0.1.71",
  "faiss-cpu==1.12.0",
  "torchdiffeq==0.2.5",
  "torchsde==0.2.6",
  "torchprofile==0.0.4",
  "kornia==0.8.1",
  "trimesh==4.8.3",
  "decord==0.6.0",
  "imageio==2.37.0",
  "mediapy==1.1.6",
  "PuLP==3.3.0",
  "optuna==4.5.0",

  # Config / experiment management.
  "hydra-core==1.3.2",
  "addict==2.4.0",
  "attrdict==2.0.1",
  "parameterized==0.9.0",
  "wandb==0.22.1",
  "nvtx==0.2.13",

  # Web / data / I/O.
  "aiohttp>=3.12",
  "boto3==1.40.43",
  "Flask-RESTful==0.3.10",
  "gdown==5.2.0",
  "h2==4.3.0",
  "PySocks==1.7.1",
  "ijson==3.4.0",
  "markdown2==2.5.4",
  "marshmallow==4.0.1",
  "einops-exts==0.0.4",
  "progress==1.6.1",

  # Dev / test / tooling (kept top-level because they were directly installed;
  # could be moved to [project.optional-dependencies] for slimming later).
  "black==24.10.0",
  "isort==5.13.2",
  "coverage==7.10.7",
  "pytest_httpserver==1.1.3",
  "pytest-mock==3.15.1",
  "pytest-runner==6.0.1",

  # Docs / misc.
  "sphinxcontrib-bibtex==2.6.5",
  "seaborn==0.13.2",
  "textdistance==4.6.3",
]

# uv-specific: declare the PyTorch cu128 index so torch + torchvision pull
# from there instead of PyPI's CPU-only wheels.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

# Build-system declaration is required by PEP 517 even though we don't
# actually build a wheel here — this project is "just a dependency manifest."
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Empty wheel: this project ships no Python package, just the dependency env.
bypass-selection = true
